// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertiesTable AgentFeatureTipMessage component should render null empty string when no docs are returned 1`] = `""`;

exports[`PropertiesTable AgentFeatureTipMessage component should render when docs are returned 1`] = `
<styled.div>
  <Styled(EuiIcon)
    type="iInCircle"
  />
  You can configure your agent to add contextual information about your users.
   
  <ExternalLink
    href="mock-url"
  >
    <FormattedMessage
      defaultMessage="Learn more in the documentation."
      id="xpack.apm.propertiesTable.agentFeature.learnMoreLinkLabel"
      values={Object {}}
    />
  </ExternalLink>
</styled.div>
`;

exports[`PropertiesTable PropertiesTable component should render empty when data isn't present 1`] = `
<styled.div>
  <Styled(styled.div)>
    <FormattedMessage
      defaultMessage="No data available"
      id="xpack.apm.propertiesTable.agentFeature.noDataAvailableLabel"
      values={Object {}}
    />
  </Styled(styled.div)>
  <InjectIntl(AgentFeatureTipMessage)
    agentName="testAgentName"
    featureName="testPropKey"
  />
</styled.div>
`;

exports[`PropertiesTable PropertiesTable component should render with data 1`] = `
<styled.div>
  <NestedKeyValueTable
    data={
      Object {
        "a": "hello",
        "b": "bananas",
      }
    }
    depth={1}
    keySorter={[Function]}
    parentKey="testPropKey"
  />
  <InjectIntl(AgentFeatureTipMessage)
    agentName="testAgentName"
    featureName="testPropKey"
  />
</styled.div>
`;

exports[`PropertiesTable PropertiesTable component should still render NestedKeyValueTable even when data has no keys 1`] = `
<styled.div>
  <NestedKeyValueTable
    data={Object {}}
    depth={1}
    keySorter={[Function]}
    parentKey="testPropKey"
  />
  <InjectIntl(AgentFeatureTipMessage)
    agentName="testAgentName"
    featureName="testPropKey"
  />
</styled.div>
`;
